Blenderplayer Standalone - mouse reverted in X11 #38645

Closed
opened 2014-02-15 11:04:52 +01:00 by Inês Almeida · 17 comments
Member

Short description of error
The mouse is reversed when showing in the standalone player. In the embedded player, everything is fine.

Exact steps for others to reproduce the error
Open default blend file
1 - switch to 'Blender Game'
2 - check 'Mouse Cursor' in the 'Display' panel
3 - Start the Standalone Player

System Information
Tested in Slackware Linux - the mouse is reversed
Tested in OS X 10.9.1 - the mouse is ok

Blender Version
2.5X -- current development version

**Short description of error** The mouse is reversed when showing in the standalone player. In the embedded player, everything is fine. **Exact steps for others to reproduce the error** Open default blend file 1 - switch to 'Blender Game' 2 - check 'Mouse Cursor' in the 'Display' panel 3 - Start the Standalone Player **System Information** Tested in Slackware Linux - the mouse is reversed Tested in OS X 10.9.1 - the mouse is ok **Blender Version** 2.5X -- current development version
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Inês Almeida self-assigned this 2014-02-15 11:04:52 +01:00
Author
Member

Added subscriber: @brita

Added subscriber: @brita
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

No bug found under OpenSuse 12.3 linux. Tested with current git master

No bug found under OpenSuse 12.3 linux. Tested with current git master

Added subscriber: @rykounanba

Added subscriber: @rykounanba

i couldn't recreate this bug on crunchbang waldorf. I also use the current git master build so i recomend you retry it with a build bot version and see if it changes anything.

i couldn't recreate this bug on crunchbang waldorf. I also use the current git master build so i recomend you retry it with a build bot version and see if it changes anything.
Inês Almeida was unassigned by Dalai Felinto 2014-02-17 12:09:57 +01:00
Dalai Felinto self-assigned this 2014-02-17 12:09:57 +01:00

Added subscriber: @Moguri

Added subscriber: @Moguri

By the way, I have the fix for this. However, I'm giving brita_ some time to figure it out on her own as a learning experience.

By the way, I have the fix for this. However, I'm giving brita_ some time to figure it out on her own as a learning experience.
Dalai Felinto removed their assignment 2014-02-17 22:28:17 +01:00

Added subscriber: @dfelinto

Added subscriber: @dfelinto

ok, she told me actually. but be sure to get the fix in before 2.70 ;)

ok, she told me actually. but be sure to get the fix in before 2.70 ;)
Mitchell Stokes self-assigned this 2014-02-17 23:39:56 +01:00

Yeah, I'll make sure it makes it into 2.70.

Yeah, I'll make sure it makes it into 2.70.
Author
Member

Meanwhile, for the testers, this seems to be a problem only with KDE.

Meanwhile, for the testers, this seems to be a problem only with KDE.

poke ... let's not forget to get this in master. RC0 is already due ;)

poke ... let's not forget to get this in master. RC0 is already due ;)

This issue was referenced by blender/blender-addons-contrib@9753641c5d

This issue was referenced by blender/blender-addons-contrib@9753641c5d8d345c9364f65940afecf0c44a6099

This issue was referenced by 9753641c5d

This issue was referenced by 9753641c5d8d345c9364f65940afecf0c44a6099
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Closed by commit 9753641c5d.

Closed by commit 9753641c5d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38645
No description provided.