Fix T38645 - Mouse reversed in standalone player with kde

Reviewers: moguri

Differential Revision: https://developer.blender.org/D344